fix banner button size and spacing

--- a/app/assets/stylesheets/homepage/homepage.css
+++ b/app/assets/stylesheets/homepage/homepage.css
@@ -8,11 +8,6 @@
 
 .top-banner {
     position: absolute;
-    /* width: 100%; */
-    /* width: 100%;
-    height: 430px;
-    background-color: rgb(187, 166, 132);
-     */
 }
 
 .top-banner > .headline{
@@ -33,10 +28,10 @@
 .banner-button{
     background: #f13a59;
     border-color: #ed1c40;
-    min-width: 250px;
+    width: 60px;
     height: 30px;
     text-align: center;
-    font-size: 16px;
+    font-size: 24px;
     font-weight: 600;
     padding: .5em;
     color: #fff;
